--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,45 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Medical</title>
-  <%= stylesheet_link_tag    "application" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+  <head>
+    <title>Medical</title>
+    <%= stylesheet_link_tag    "application" %>
+    <%= javascript_include_tag "application" %>
+    <%= csrf_meta_tags %>
+  </head>
+  <body>
 
-<%= yield %>
+    <%= render :partial => "layouts/header" %>
 
-</body>
+    <div class="container-fluid">
+      <div class="row-fluid">
+        <div class="span3">
+          <div class="well" style="padding: 8px 0;">
+            <ul class="nav nav-list">
+              <li class="nav-header">Admin Menü</li>
+              <li class="active"><a href="/admin"><i class="icon-white icon-home"></i> Anasayfa</a></li>
+              <li><a href="#"><i class="icon-book"></i> Kütüphane</a></li>
+              <li><a href="#"><i class="icon-pencil"></i> Uygulamalar</a></li>
+              <li class="nav-header">Another list header</li>
+              <li><a href="/admin/profile"><i class="icon-user"></i> Hesap</a></li>
+              <li><a href="#"><i class="icon-cog"></i> Ayarlar</a></li>
+              <li><a href="/admin/help"><i class="icon-flag"></i> Yardım</a></li>
+            </ul>
+          </div> <!-- /well -->
+        </div><!--/span-->
+
+        <div class="span9">
+          <div class="row-fluid">
+            <%= render :partial => "admin/header" %>
+            <%= render :partial => "layouts/notice" %>
+
+            <hr>
+            <%= yield %>
+          </div>
+        </div>
+
+      </div><!--/row-->
+    </div><!-- /container -->
+
+    <%= render :partial => "layouts/footer" %>
+  </body>
 </html>
