--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,26 +1,29 @@
-<center>
-  <h2>Online Hasta Başvuru Sistemi</h2>
-  <hr />
-</center>
+<article class="container">
 
-<div class="span3">
-  <div class="thumbnail">
-    <img src="/assets/19-negative-640x640.png" alt="">
-    <div class="caption">
-      <h4>Başvuru Yap</h4>
-      <p>Hmm</p>
-      <p><a href="/home/consult_register" class="btn btn-primary">Başvuru Yap</a></p>
-    </div>
-  </div>
+<section class="row features">
+<h2>Hasta kayıt yönetim sistemi ve online hasta randevu sistemi</h2>
+<p class="intro">Hafif, hızlı ve gerçekten kullanacağınız özelliklere sahip bir sistem.</p>
+
+<div class="span6">
+  <h3>Kolay ve hızlı randevu kayıt <span class="label label-warning"><i class="icon-check"></i></span></h3>
+  <p>Tc, doğum tarihi, doğum yeri bilgilerinizle; istediğiniz bölümün doktorundan randevu alın.<a href="/home/consult_register" class="btn">Başvuru</a></p>
 </div>
 
-<div class="span3">
-  <div class="thumbnail">
-    <img src="/assets/19-normal-640x640.png" alt="">
-    <div class="caption">
-      <h4>Başvuru Sorgu</h4>
-      <p>Hmm</p>
-      <p><a href="/home/consult_query" class="btn btn-primary">Başvuru Sorgu</a></p>
-    </div>
-  </div>
+<div class="span6">
+  <h3>Randevularınızı inceleyin, iptal edin <span class="label label-warning"><i class="icon-search"></i></span></h3>
+  <p>Tc, doğum tarihi, doğum yeri bilgilerinizle; randevunuzu inceleyin ve iptal edin. <br/><a href="/home/consult_query" class="btn">Sorgu</a></p>
 </div>
+
+<div class="span6">
+  <h3>Admin paneli ile mühendis gibi yönetin <span class="label label-warning"><i class="icon-random"></i></span></h3>
+  <p>Yönetim panelinde <span class="label">admin</span>, <span class="label">superadmin</span> ile randevu isteklerini hızlı ve etkili olarak yönetin. <br/><a class="btn" data-toggle="modal" href="#admin">Giriş</a></p>
+</div>
+
+<div class="span6">
+  <i class="collaborate"></i>
+  <h3>Sistem tarafından bilgilendirilin <span class="label label-warning">Pek Yakında</span></h3>
+  <p>Randevu saati öncesinde ve sonrasında kullanılan ilacın K.T ve S.K.T'den önce mail ile bilgilenin, unuttum derdine son verin.</p>
+</div>
+
+</section>
+</article>
