--- a/app/views/layouts/_admin_login.html.erb
+++ b/app/views/layouts/_admin_login.html.erb
@@ -6,25 +6,7 @@
   </div>
   <div class="modal-body">
 
-    <%= form_tag({:action => 'sign_in', :controller => '/admin'}, :method => 'post') do %>
-      <fieldset>
-        <div class="control-group">
-          <label class="control-label" for="input01">Kullanıcı Adı</label>
-          <div class="controls">
-            <input type="text" class="input-xlarge" id="input01" name="first_name">
-          </div>
-        </div>
-        <div class="control-group">
-          <label class="control-label" for="input02">Parola</label>
-          <div class="controls">
-            <input type="text" class="input-xlarge" id="input02" name="password">
-          </div>
-        </div>
-      </fieldset>
-      <div class="form-actions">
-        <button type="submit" class="btn btn-primary">Giriş Yap</button>
-      </div>
-    <% end %>
+    <%= render :template => "admin/login" %>
 
   </div>
 </div><!--/.modal-form -->
