--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -13,6 +13,8 @@
 
     <!-- container -->
     <div class="container">
+      <%= render :partial => "layouts/notice" %>
+
       <hr>
       <%= yield %>
     </div> <!-- /container -->
