--- a/app/assets/stylesheets/overwrite.css
+++ b/app/assets/stylesheets/overwrite.css
@@ -24,13 +24,66 @@ body {
     width: 100%;
 }
 
-.scrollspy {
+.scrollspy1 {
     height: 200px;
     overflow: auto;
     position: relative;
+    margin-bottom:10px;
+    margin-bottom:100px;
+}
+
+.scrollspy2 {
+    height: 300px;
+    overflow: auto;
+    position: relative;
+    margin-bottom:100px;
+}
+
+.scrollspy3 {
+    height: 400px;
+    overflow: auto;
+    position: relative;
+    margin-bottom:100px;
+}
+
+.scrollspy4 {
+    height: 500px;
+    overflow: auto;
+    position: relative;
+    margin-bottom:100px;
 }
 
 .span3 .thumbnail img {
     width: 240px;
     height: 200px;
 }
+
+.tab-pane {
+    min-height: 300px;
+    margin-bottom:100px;
+}
+
+p {
+  font-size: 16px;
+  color: #606060;
+  line-height: 1.5;
+  margin: 0 0 1.2em; }
+
+section {
+  padding-top: 20px; }
+  section h2 {
+    text-align: center;
+    margin: 0; }
+  section h3 {
+    margin-bottom: 0.2em;
+    line-height: 1.2;
+    margin-top: 0; }
+  section .intro {
+    text-align: center;
+    font-size: 18px;
+    color: #777;
+    margin: 0.5em 0 3em; }
+  section.features .span6 {
+    margin-bottom: 40px; }
+    section.features .span6 > p, section.features .span6 > h3 {
+      margin-left: 98px; }
