--- a/app/views/admin/admins/new.html.erb
+++ b/app/views/admin/admins/new.html.erb
@@ -1,6 +1,6 @@
 <form action="/admin/admins" method="post" class="form-horizontal">
   <fieldset>
-    <legend>Hasta Ekle</legend>
+    <legend>Admin Ekle</legend>
     <div class="control-group">
       <label class="control-label" for="input01">Ad (*)</label>
       <div class="controls">
@@ -23,12 +23,12 @@
       <label class="control-label">Grup</label>
       <div class="controls">
         <label class="radio">
-          <input type="radio" name="gender" id="optionsRadios1" value="1" checked>
-          <span class="label label-info">Grup 1</span>
+          <input type="radio" name="status" id="optionsRadios1" value="1" checked>
+          <span class="label label-info">Admin</span>
         </label>
         <label class="radio">
-          <input type="radio" name="gender" id="optionsRadios2" value="0">
-          <span class="label label-important">Grup 2</span>
+          <input type="radio" name="status" id="optionsRadios2" value="0">
+          <span class="label label-important">Personel</span>
         </label>
       </div>
     </div>
