--- a/app/views/admin/doctors/index.html.erb
+++ b/app/views/admin/doctors/index.html.erb
@@ -2,15 +2,13 @@
 
 <% if doctors.count > 0 %>
   <div class="well"><h5>Doktorlar</h5></div>
-  <table class="table">
+  <table class="table table-condensed">
     <thead>
       <tr>
         <th>#</th>
         <th>Bölüm</th>
         <th>Ad</th>
         <th>Soyad</th>
-        <th>Eklenen Tarih</th>
-        <th>Güncellenen Tarih</th>
         <th></th>
       </tr>
     </thead>
@@ -21,8 +19,6 @@
           <td><%= doctor.department.name %></td>
           <td><%= doctor[:first_name] %></td>
           <td><%= doctor[:last_name] %></td>
-          <td><%= doctor[:created_at] %></td>
-          <td><%= doctor[:updated_at] %></td>
           <td class="links">
             <a href="/<%= request[:controller] %>/<%= doctor[:id] %>" rel="tooltip" class="icon-info-sign" title="Göster"></a>
             <a href="/<%= request[:controller] %>/<%= doctor[:id] %>/destroy" rel="tooltip" class="icon-trash" title="Sil"
