--- a/app/views/admin/trial_types/index.html.erb
+++ b/app/views/admin/trial_types/index.html.erb
@@ -16,7 +16,7 @@
 <% trial_types = TrialType.all %>
 
 <% if trial_types.count > 0 %>
-  <table class="table">
+  <table class="table table-condensed">
     <thead>
       <tr>
         <th>#</th>
