--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,19 +1,21 @@
 <div id="myCarousel" class="carousel slide">
   <div class="carousel-inner">
     <div class="item active">
-      <img src="/src/images/1.png" alt="">
+      <img src="/src/medical.png" alt="">
       <div class="carousel-caption">
         <h4>Hmm</h4>
         <p>foo</p>
       </div>
     </div>
-    <div class="item">
-      <img src="/src/images/1.png" alt="">
-      <div class="carousel-caption">
-        <h4>Hmm</h4>
-        <p>foo</p>
+    <% (1..20).each do |picture_no| %>
+      <div class="item">
+        <img src="/src/images/<%= picture_no %>.png" alt="">
+        <div class="carousel-caption">
+          <h4>Hmm</h4>
+          <p>foo</p>
+        </div>
       </div>
-    </div>
+    <% end %>
   </div>
   <a class="left carousel-control" href="#myCarousel" data-slide="prev">&lsaquo;</a>
   <a class="right carousel-control" href="#myCarousel" data-slide="next">&rsaquo;</a>
