--- a/app/views/admin/blood_groups/edit.html.erb
+++ b/app/views/admin/blood_groups/edit.html.erb
@@ -2,7 +2,7 @@
 
   <form action="/admin/blood_groups/update" method="post" class="form-horizontal" >
     <fieldset>
-      <legend>Doktor Düzenle</legend>
+      <legend>Kan Grup Düzenle</legend>
       <div class="control-group">
         <label class="control-label" for="input01">Ad (*)</label>
         <div class="controls">
